# status-tiles

./: .coveragerc  .pre-commit-config.yaml  README.md  Taskfile.yaml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/: docker-build-test.yaml
status_tiles/templates/: base.html  status_tile.html
