[tool.poetry]
name = "status-tiles"
version = "0.1.0"
description = "A modern status board with FastAPI and HTMX"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "status_tiles"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
jinja2 = "^3.1.2"
stevedore = "^5.1.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.18"
httpx = "^0.26.0"
psutil = "^5.9.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.3"
pytest-mock = "^3.12.0"
ruff = "^0.1.9"
bandit = "^1.7.6"
bump-my-version = "^0.28.1"
pylint = "^3.3.1"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."status_tiles.plugins"]
http_check = "status_tiles.plugins.http_check:HTTPCheck"
system_check = "status_tiles.plugins.system_check:SystemCheck"

# ruff configuration
[tool.ruff]
show-fixes = true
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
line-length = 120
target-version = "py312"
src = ["status_tiles", "tests"]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.lint.isort]
order-by-type = true

[tool.ruff.lint.pydocstyle]
convention = "google"

# pytest configuration
[tool.pytest.ini_options]
addopts="-ra --tb=short "
# These are clutter
filterwarnings = [
    "ignore:datetime.datetime.utcnow:DeprecationWarning",
    "ignore:datetime.datetime.now:DeprecationWarning"
]

[tool.coverage.run]
source = ["status_tiles"]
branch = true

[tool.coverage.report]
fail_under = 80

# pylint configuration
[tool.pylint.basic]
dostring-min-length=10

[tool.pylint.design]
exclude-too-few-public-methods=true

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "E0401", # Disable import errors
]

[tool.flake8]
max-line-length=120

# bumpversion configuration
[tool.bumpversion]
current_version = "0.1.0"
commit = false
tag = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
message = "Version updated from {current_version} to {new_version}"

[[tool.bumpversion.files]]
filename = "README.md"

[[tool.bumpversion.files]]
filename = "Taskfile.yaml"